--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@ body {
 .catalogimg:hover {
   transform: scale(1.02);
 }
-
+.mobile-title {
+  display: none;
+}
 h1 {
   padding-left: 20px;
   font-family: "Raleway", sans-serif;
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: 400;
   margin: 5px;
 }
@@ -31,7 +33,7 @@ h1 {
 h2 {
   padding-left: 20px;
   font-family: "Raleway", sans-serif;
-  font-size: 1.1em;
+  font-size: 1.5em;
   font-weight: 100;
   font-style: italic;
   margin: 5px;
@@ -70,6 +72,7 @@ ul {
 .alinks {
   text-decoration: none;
   color: #7c8570;
+  font-size: 1.5em;
   font-weight: 200;
   margin: 0 10px 0 10px;
   transition: 200ms;
@@ -97,9 +100,93 @@ li {
   list-style: none;
   margin-bottom: 8px;
 }
+#hamburger-menu {
+  display: none;
+}
 
 @media screen and (max-width: 992px) {
   body {
-    background-color: blue;
+    display: flex;
+    flex-direction: column;
+  }
+  .mobile-title {
+    display: flex;
+    width: 500px;
+  }
+  h1 {
+    display: none;
+  }
+  h2 {
+    display: none;
+  }
+  .navlinks {
+    display: none;
+  }
+  #hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+  }
+  .hamburger-button {
+    align-self: flex-end;
+    background-color: #33333300;
+    color: #7c8570;
+    padding: 10px 10px;
+    font-size: 4em;
+    cursor: pointer;
+    border: none;
+    position: relative;
+  }
+  .side-nav {
+    align-items: flex-start;
+    padding: 40px 20px 10px 0px;
+    margin-left: 30px;
+  }
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    top: 120px;
+    width: 100%;
+    height: 20px;
+    background-color: #ffffff00; /* Set the background color as needed */
+    z-index: 900;
+  }
+  .burgerlinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #7c8570;
+    padding: 60px 40px;
+    z-index: 1000;
+    color: white;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+  }
+
+  /* Initial styles */
+  .burgerlinks {
+    display: none;
+  }
+
+  /* Active state styles */
+  .nav-links.active .burgerlinks {
+    display: block;
+  }
+  .burgerlinks:hover {
+    background-color: #353c2c;
+  }
+}
+
+@media screen and (max-width: 790px) {
+  .mobile-title {
+    width: 300px;
+    font-size: 1.5em;
+  }
+}
+@media screen and (max-width: 590px) {
+  .mobile-title {
+    width: 250px;
+    font-size: 1.3em;
   }
 }
