--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .nav-container {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
 }
 
 nav {
@@ -197,7 +197,7 @@ nav ul li ul li a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 15px auto;
+  padding: 10px auto;
 }
 .banner-title {
   margin: 20px;
