--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .brand {
   float: left;
   position: absolute;
+  padding-top: 10px;
   padding-left: 20px;
   line-height: 80px;
   font-size: 1.5em;
@@ -35,12 +36,13 @@ body {
 }
 
 .nav-container {
-  max-width: 1000px;
+  max-width: 1300px;
   margin: 10px auto 0 auto;
 }
 
 nav {
   float: right; /*se coloca si quiero que el menu baje el contenido */
+  min-width: 290px;
 }
 
 .navicon {
@@ -107,7 +109,7 @@ nav ul li ul li a {
   left: 18px;
   top: 22px;
   cursor: pointer;
-  padding: 15px 35px 15px 0px;
+  padding: 28px 35px 15px 0px;
 }
 
 #nav-toggle span,
@@ -147,7 +149,7 @@ nav ul li ul li a {
   transform: rotate(-45deg);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 798px) {
   .nav-mobile {
     display: block;
   }
@@ -192,12 +194,12 @@ nav ul li ul li a {
 
 .banner {
   display: flex;
-  height: 300px;
+  height: 260px;
   width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10px auto;
+  padding: 5px auto;
 }
 .banner-title {
   margin: 20px;
@@ -242,29 +244,83 @@ nav ul li ul li a {
   justify-content: center;
 }
 .card {
-  max-width: 450px;
-  min-width: 250px;
-  margin: 10px;
+  margin: 15px;
+  width: 480px;
+  height: 710px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .catalogimg {
-  object-fit: cover;
-  min-width: 250px;
-  width: 450px;
-  height: 450px;
+  width: 100%;
+  align-self: center;
+  height: 80%;
   margin: 0px;
+  min-width: 40%;
+  object-fit: cover;
   transition: all 0.3s;
 }
 
 .infocard {
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
+  align-self: center;
   justify-content: space-between;
   padding: 10px 15px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   height: 20px;
   color: var(--lightgreen-text);
 }
 .infocard-item {
   padding: 5px 10px;
+}
+
+@media only screen and (max-width: 399px) {
+  .card {
+    margin: 15px;
+    width: 320px;
+    height: 510px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .infocard-item {
+    font-size: 1.2rem;
+  }
+}
+
+/* END OF CATALOG */
+.footer-container {
+  background-color: var(--lightgreen-text);
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.footericon {
+  width: 120px;
+}
+
+.footer-list li{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-list a {
+  text-transform: uppercase;
+  padding: 0 20px;
+  line-height: 30px;
+  text-decoration: none;
+  color: var(--lightgrey);
+}
+
+.footer-list a:hover {
+  text-decoration: underline;
+  text-underline-offset: 8px;
+  color: var(--background-color);
 }
